popup z-index error fix

--- a/public/style.css
+++ b/public/style.css
@@ -196,6 +196,7 @@ img.previewImg.visible {
 /* POPUP */
 
 .popup_wrapper {
+    z-index: 1;
     position: absolute;
     height: 100%;
     width: 100%;
